--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 07:05:04 2018</p>
+         Last Run: Sun Jul 15 08:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -30,43 +30,43 @@
                   <tbody>
                      <tr>
                         <td>09:00 AM</td>
-                        <td>Clear</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>Partly Cloudy</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>26</td>
+                        <td>WSW</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>44</td>
                         <td>3</td>
-                        <td>6</td>
-                        <td>WNW</td>
-                        <td>29</td>
+                        <td>8</td>
+                        <td>NW</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>38</td>
                         <td>4</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>20</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
@@ -74,7 +74,7 @@
                         <td>6</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>30</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>7</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,9 +132,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
+                 "15",
                  "18",
-                 "21",
+                 "20",
                  "22",
                  "24"
                ]
@@ -145,9 +145,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
+                 "15",
                  "18",
-                 "21",
+                 "20",
                  "22",
                  "24"
                ]
@@ -214,9 +214,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "41",
-                 "35",
+                 "54",
+                 "44",
+                 "38",
                  "30",
                  "26"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
+                 "30",
+                 "34",
                  "29",
                  "20",
-                 "30",
-                 "41"
+                 "40"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 07:05:04 2018</p>
+         Last Run: Sun Jul 15 08:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -285,7 +285,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
@@ -294,12 +294,12 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -347,7 +347,7 @@
                "data":[
                  "30",
                  "29",
-                 "28"
+                 "27"
                ]
              },
              {
@@ -358,7 +358,7 @@
                "data":[
                  "30",
                  "29",
-                 "28"
+                 "27"
                ]
              }
            ]
@@ -420,8 +420,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "21",
-                 "23",
-                 "28"
+                 "24",
+                 "29"
                ]
              },
              {
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 07:05:04 2018</p>
+         Last Run: Sun Jul 15 08:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -473,11 +473,11 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>36</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -489,7 +489,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>41</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -619,7 +619,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
+                 "32",
                  "37",
                  "46"
                ]
@@ -629,8 +629,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "41",
+                 "38",
+                 "42",
                  "45"
                ]
              }
@@ -648,7 +648,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 07:05:04 2018</p>
+         Last Run: Sun Jul 15 08:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -672,48 +672,48 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>38</td>
                         <td>3</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>33</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>40</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>39</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>34</td>
+                        <td>38</td>
                         <td>43</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>48</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>48</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -825,10 +825,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "18",
-                 "34",
-                 "3"
+                 "3",
+                 "19",
+                 "38",
+                 "4"
                ]
              },
              {
@@ -847,10 +847,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "39",
-                 "54",
-                 "48"
+                 "35",
+                 "41",
+                 "58",
+                 "52"
                ]
              }
            ]
@@ -867,7 +867,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 07:05:04 2018</p>
+         Last Run: Sun Jul 15 08:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
