--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 09:05:04 2018</p>
+         Last Run: Sun Jul 15 10:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>0</td>
-                        <td>50</td>
-                        <td>3</td>
-                        <td>5</td>
-                        <td>NW</td>
-                        <td>34</td>
-                     </tr>
-                     <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>39</td>
                         <td>4</td>
-                        <td>5</td>
-                        <td>NNE</td>
-                        <td>33</td>
+                        <td>8</td>
+                        <td>E</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,23 +46,23 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>33</td>
                         <td>6</td>
-                        <td>6</td>
-                        <td>NE</td>
-                        <td>31</td>
+                        <td>10</td>
+                        <td>ENE</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>28</td>
                         <td>7</td>
-                        <td>6</td>
-                        <td>ENE</td>
-                        <td>40</td>
+                        <td>10</td>
+                        <td>E</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,7 +95,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
              "11:00 AM",
              "12:00 PM",
              "01:00 PM"
@@ -119,10 +106,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
-                 "19",
+                 "20",
                  "21",
-                 "24"
+                 "23"
                ]
              },
              {
@@ -131,10 +117,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
-                 "19",
+                 "20",
                  "21",
-                 "24"
+                 "23"
                ]
              }
            ]
@@ -175,7 +160,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
              "11:00 AM",
              "12:00 PM",
              "01:00 PM"
@@ -188,7 +172,6 @@
                "data":[
                  "0",
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -197,10 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "42",
-                 "35",
-                 "26"
+                 "39",
+                 "33",
+                 "28"
                ]
              },
              {
@@ -208,10 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "33",
-                 "31",
-                 "40"
+                 "30",
+                 "30",
+                 "49"
                ]
              }
            ]
@@ -229,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 09:05:04 2018</p>
+         Last Run: Sun Jul 15 10:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -266,7 +247,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
@@ -278,7 +259,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
@@ -401,8 +382,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "21",
-                 "23",
-                 "28"
+                 "24",
+                 "29"
                ]
              },
              {
@@ -429,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 09:05:04 2018</p>
+         Last Run: Sun Jul 15 10:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -458,7 +439,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -470,7 +451,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -481,7 +462,7 @@
                         <td>46</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>46</td>
                      </tr>
                   </tbody>
@@ -610,8 +591,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "42",
+                 "38",
+                 "43",
                  "46"
                ]
              }
@@ -629,7 +610,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 09:05:04 2018</p>
+         Last Run: Sun Jul 15 10:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -653,43 +634,43 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>12</td>
-                        <td>39</td>
+                        <td>4</td>
+                        <td>38</td>
                         <td>3</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>34</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>24</td>
-                        <td>40</td>
+                        <td>20</td>
+                        <td>39</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>40</td>
+                        <td>38</td>
                         <td>42</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>48</td>
                         <td>0</td>
                         <td>14</td>
@@ -806,10 +787,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "24",
-                 "40",
-                 "4"
+                 "4",
+                 "20",
+                 "38",
+                 "3"
                ]
              },
              {
@@ -817,8 +798,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "38",
                  "39",
-                 "40",
                  "42",
                  "48"
                ]
@@ -828,9 +809,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "40",
-                 "60",
+                 "35",
+                 "41",
+                 "59",
                  "53"
                ]
              }
@@ -848,7 +829,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 09:05:04 2018</p>
+         Last Run: Sun Jul 15 10:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
